# AeroScript_SFC_Translator

./: .gitignore  CMakeLists.txt  README.md  main.cpp  network.hpp  network.tpp  network_tests.cpp  step.hpp  step_tests.cpp  textParser_tests.cpp  textReader_tests.cpp  transition_tests.cpp  variable_init_tests.cpp
Input/: Cycle_Motion_Example.txt  Variables_and_Control_Flow_Example.txt
Output/: Output_ControlFlow.csv  Output_CycleMotion.csv
classes/: Command.hpp  step.hpp  step.tpp  textReader.hpp  transition.hpp  transition.tpp
functions/: any_to_String.cpp  any_to_String.hpp  combine_text.hpp  combine_text.tpp  match_functions.hpp  match_functions.tpp  network_init.hpp  network_init.tpp  textParser.hpp  textParser.tpp  variable_Init.tpp  variable_init.hpp  write_csv.tpp
